v0.2:
  - added C code and an engine argument to use C