@@ -1,2 +1,4 @@
 v0.2:
   - added C code and an engine argument to use C
+  - resample function had argument change from resample.function to rrf which takes a character string
+
